@@ -1,3 +1,8 @@
+2011-09-12  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* wlanapi.h: Added WLAN_NOTIFICATION_ACM enumeration (patch from
+	'balkin7').
+
 2011-09-03  Jose Fonseca  <jrfonseca@users.sourceforge.net>
 
 	* winuser.h (CreateDesktopEx, CreateDesktopExA, CreateDesktopExW):
